# fastapi-training

./: main.py  pyproject.toml
fastapi_training/: database.py
fastapi_training/Handlers/: authenciate.py  blog_handler.py  oauth2.py  user_handler.py
fastapi_training/Router/: blog.py  user.py
fastapi_training/model/: blog.py  user_model.py
